force-app/main/default/objects/NEPA_Map_Config__mdt/NEPA_Map_Config__mdt.object-meta.xml
<CustomObject>
    <label>NEPA Map Config</label>
    <pluralLabel>NEPA Map Configs</pluralLabel>
</CustomObject>