force-app/main/default/objects/NEPA_Map_Config__mdt/fields/Base_Map_Layer__c.field-meta.xml
<CustomField>
    <fullName>Base_Map_Layer__c</fullName>
    <label>Base Map Layer</label>
    <type>Text</type>
    <length>255</length>
</CustomField>