force-app/main/default/objects/NEPA_Map_Config__mdt/fields/Default_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Default_Latitude__c</fullName>
    <label>Default Latitude</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>6</scale>
</CustomField>