force-app/main/default/objects/NEPA_Map_Config__mdt/fields/Default_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Default_Longitude__c</fullName>
    <label>Default Longitude</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>6</scale>
</CustomField>